--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     border: 1px solid #000;
     border-radius: 10px;
-    height: 400px;
-    width: 400px;
+    height: 500px;
+    width: 500px;
 }
 
 .title {
@@ -33,7 +33,9 @@ body {
     cursor: pointer;
     background: #044cd0;
     color: #fff;
-    width: 100px;
+    width: 120px;
+    outline: none;
+    margin: 5px;
 }
 
 .container__score {
@@ -46,4 +48,19 @@ body {
 .container__score div {
     margin: 20px 20px;
     display: inline-block;
+}
+
+.text-result {
+    font-weight: 700;
+}
+
+.btn-reset {
+    padding: 15px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    background: #7a8793;
+    color: #fff;
+    width: 120px;
+    outline: none;
 }
